--- a/.env.template
+++ b/.env.template
@@ -1,27 +1,48 @@
+# Security Warning! Do not commit this file to any VCS!
+# This is a local file to speed up development process,
+# so you don't have to change your environment variables.
+#
+# This is not applied to `.env.template`!
+# Template files must be committed to the VCS, but must not contain
+# any secret values.
+
+
+# === General settings ===
+
+STAGE=
 VERSION=
-CONFIG_MODE=
-LOG_LEVEL=
+
+# === Bot settings ===
+
 ACCESS_TOKEN=
 CLIENT_SECRET=
-BOT_PREFIX=
-BOT_SITE_URL=
-BOT_AI_URL=
-BOT_AI_KEY=
-DISCORD_WEBHOOK_BUGS=
-DISCORD_WEBHOOK_SUGGESTIONS=
-DEV_NICK=
-DATABASE_URL=
+COLOR=
+DEV=
+PREFIX=
+SITE_URL=
+WEBHOOK_BUGS_URL=
+WEBHOOK_SUGGESTIONS_URL=
+
+# === Database settings ===
+
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_NAME=
+DB_URL=
 REDIS_URL=
-API_ANALYTICS_URL=
-API_ANALYTICS_KEY=
-API_BUGSNAG_KEY=
-API_COLOR_URL=
-API_CRYPTO_URL=
-API_CRYPTO_KEY=
-API_CURRENCY_URL=
-API_CURRENCY_KEY=
-API_DICIO_URL=
-API_MATH_URL=
-API_TRANSLATE_URL=
-API_TWITCH_URL=
-API_WEATHER_KEY=
+
+
+# === Logging settings ===
+
+LOG_FILE_CONFIG=
+LOG_LEVEL=
+LOG_FORMAT=
+
+
+# === API settings ===
+
+BUGSNAG_KEY=
+COINAPI_KEY=
+DASHBOT_KEY=
+OWM_KEY=
