--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,46 +5,45 @@ name: CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - ".github/workflows/*.yml"
+      - "**.py"
+      - ".dockerignore"
+      - "Dockerfile"
+      - "requirements/*.txt"
+      - "setup.cfg"
   pull_request:
     branches: [ main ]
 
 jobs:
-  build:
-    name: CI
+  ci:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-    - name: Cache
-      uses: actions/cache@v2
-      with:
-        path: ${{ env.pythonLocation }}
-        key: ${{ env.pythonLocation }}-${{ hashFiles('requirements.txt') }}
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('requirements/prod.txt') }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install
+        run: make install
 
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Lint
+        run: make lint
 
-    - name: Test with pytest
-      run: |
-        pip install pytest pytest-cov pytest-asyncio asynctest
-        pytest --cov=./bobotinho --cov-report=xml
+      - name: Tests
+        run: make test
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
-      with:
-        files: ./coverage.xml
+      - name: Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          files: ./coverage.xml
